fix: correct overflow property in spoiler-blurred class

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,5 +1,5 @@
 .spoiler-blurred {
-  overflow: hidden;
+  clip-path: inset(0);
   filter: blur(48px) !important;
 
   .discourse-no-touch & {
